Bug 161508 - Writer hangs opening a specific document with a table with table with some cells merged and a minimal row height
Summary: Writer hangs opening a specific document with a table with table with some ce...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.3.0.3 release
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:25.2.0 target:24.8.0.0.beta2 t...
Keywords: bibisectNotNeeded, regression
Depends on:
Blocks:
 
Reported: 2024-06-11 12:29 UTC by Mike Kaganski
Modified: 2025-07-14 12:48 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
A minimized reproducer (2.65 KB, application/vnd.oasis.opendocument.text)
2024-06-11 12:29 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2024-06-11 12:29:13 UTC
Created attachment 194656 [details]
A minimized reproducer

Opening the attached document hangs since commit 6f5024de2e1a5cc533527e45b33d9a415467c48d (tdf#104425 sw: split rows w/large min height (fix layout loop), 2016-12-12).
Comment 1 Commit Notification 2024-06-11 18:00:02 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0c49aa58cfbb81073e34b1d47861a5a1fdd44114

tdf#161508: add another loop control hack

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2024-06-12 06:53:39 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/86b0f56c840f2d982a9f845e25ac54d25204ee79

tdf#161508: add another loop control hack

It will be available in 24.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2024-06-14 08:54:16 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/527bde6d02e49bbbe5a81a126d65947c527bd58f

tdf#161508: add another loop control hack

It will be available in 24.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2025-07-14 04:44:28 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8946628f0ce28d111c9dfcfbd73e30afac32c157

tdf#165156: limit hack for tdf#161508 even more

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2025-07-14 11:12:22 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/29f44d08b17550a11bd68f6dcde0f7a1fb84641e

tdf#165156: limit hack for tdf#161508 even more

It will be available in 25.2.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2025-07-14 12:48:38 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/a9bf303dfb348265edf7c2c61fc3b8a6511fd5df

tdf#165156: limit hack for tdf#161508 even more

It will be available in 25.8.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.