sw/source/core/layout/tabfrm.cxx
@@ -2059,6 +2059,29 @@ namespace {
 
         return bRet;
     }
+
+// Similar to SwObjPosOscillationControl in sw/source/core/layout/anchoreddrawobject.cxx
+class PosSizeOscillationControl
+{
+public:
+    bool OscillationDetected(const SwFrameAreaDefinition& rFrameArea);
+
+private:
+    std::vector<std::pair<SwRect, SwRect>> maFrameDatas;
+};
+
+bool PosSizeOscillationControl::OscillationDetected(const SwFrameAreaDefinition& rFrameArea)
+{
+    if (maFrameDatas.size() == 20) // stack is full -> oscillation
+        return true;
+
+    for (const auto& [area, printArea] : maFrameDatas)
+        if (rFrameArea.getFrameArea() == area && rFrameArea.getFramePrintArea() == printArea)
+            return true;
+
+    maFrameDatas.emplace_back(rFrameArea.getFrameArea(), rFrameArea.getFramePrintArea());
+    return false;
+}
 }
 
 // extern because static can't be friend
@@ -2256,6 +2279,7 @@ void SwTabFrame::MakeAll(vcl::RenderContext* pRenderContext)
 
     int nUnSplitted = 5; // Just another loop control :-(
     int nThrowAwayValidLayoutLimit = 5; // And another one :-(
+    PosSizeOscillationControl posSizeOscillationControl; // And yet another one.
     SwRectFnSet aRectFnSet(this);
     while ( !isFrameAreaPositionValid() || !isFrameAreaSizeValid() || !isFramePrintAreaValid() )
     {
@@ -2946,7 +2970,9 @@ void SwTabFrame::MakeAll(vcl::RenderContext* pRenderContext)
                     // split operation as good as possible. Therefore we
                     // do some more calculations. Note: Restricting this
                     // to nDeadLine may not be enough.
-                    if ( bSplitError && bTryToSplit ) // no restart if we did not try to split: i72847, i79426
+                    // tdf#161508 hack: treat oscillation likewise
+                    if ((bSplitError && bTryToSplit) // no restart if we did not try to split: i72847, i79426
+                        || posSizeOscillationControl.OscillationDetected(*this))
                     {
                         lcl_RecalcRow(*static_cast<SwRowFrame*>(Lower()), LONG_MAX);
                         setFrameAreaPositionValid(false);
